--- a/src/styles/features/about/about-hero/_responsive.scss
+++ b/src/styles/features/about/about-hero/_responsive.scss
@@ -187,7 +187,7 @@
     align-items: center;
     justify-content: flex-start;
 
-    padding-top: clamp(150px, 22vh, 190px);
+    padding-top: clamp(108px, 15vh, 132px);
     padding-bottom: 40px;
 
     transform: none;
@@ -354,7 +354,7 @@
     align-items: center;
     justify-content: flex-start;
 
-    padding-top: clamp(200px, 30vh, 230px);
+    padding-top: clamp(170px, 25vh, 200px);
     padding-bottom: 44px;
 
     transform: none;
